--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     section {
       padding: 20px;
       text-align: center;
-      color: #fff;
+      color: blue; /* Cambio de color a azul */
     }
     
     footer {
