--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>The future has landed</h2>
-							<p>And there are no hoverboards or flying cars.<br />
-							Just apps. Lots of mother flipping apps.</p>
+							<h2>Bienbenido a CreART-RM</h2>
+							<p>Rolando Martinez.<br />
+							Just apps. Raquel Monserrat.</p>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
