--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<header>
 							<h2>Bienbenido a CreART-RM</h2>
 							<p>Rolando Martinez.<br />
-							Just apps. Raquel Monserrat.</p>
+							Lic. Raquel Monserrat.</p>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
@@ -65,7 +65,7 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
+										<h2>ARTE DIGITAL-CreART-RM</h2>
 										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
 									</header>
 								</div>
